<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_event_list"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/relative_layout_event_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray2">

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/Event"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_event_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_event_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Dimulai_pada"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_event_date"
                android:layout_below="@id/tv_event_name"
                android:layout_toRightOf="@id/tv_event_details"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="10 Februari 2022"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/add_calender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_event_details"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Add_to_calender"
                android:textSize="10sp"
                android:backgroundTint="@color/blue"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>