<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tv_login_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/Create_your_account"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/tv_login_account"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_border_black"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:drawableTint="@color/gray"
        android:hint="Email"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_password_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/et_email_register"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_border_black"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:drawableTint="@color/gray"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/et_password_register"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_border_black"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:drawableTint="@color/gray"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/et_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_solid_blue"
        android:text="@string/Sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:backgroundTint="@color/blue" />

    <RelativeLayout
        android:id="@+id/relative_layout_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp">

        <TextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Already_have_an_account"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/Tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/tv_already_have_account"
            android:text="@string/Sign_in"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </RelativeLayout>

</RelativeLayout>